[project]
name = "field-matcher"
version = "0.1.0"
description = "Void Fragment: Semantic field matching using embeddings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ivars Bariss Solutions SIA" }
]
keywords = ["field-matching", "embeddings", "semantic-similarity", "void-fragments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers",
    "scikit-learn",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
field-matcher = "field_matcher:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.setuptools]
py-modules = ["field_matcher", "config"]
